<resources>
    <string name="app_name">ModernSimmingApp</string>
    <string name="test_load_post">Test Loading a Post</string>
    <string name="test_load_group">Test Loading a Group</string>
    <string name="test_content_provider">Get Group Names via Content Provider</string>
    <string name="test_worker">Test Work Request</string>
    <string name="add_group">New Group</string>
    <string name="group_name">Group Name</string>
    <string name="add_group_success">Successfully added group</string>
    <string name="test_get_post_titles">Try Getting Post Titles from ContentProvider</string>
    <string name="test_dictation">Try Dictation</string>
    <string name="test_functionality">Test App Functionality</string>
    <string name="onboarding_select_group_name">Let\'s set you up with a group to view posts in</string>
    <string name="add_group_button">Add New Group</string>
    <string name="actions">Actions</string>
    <string name="select_group">Open Group</string>
    <string name="please_select_group">Please select a Group to view Posts in</string>
    <string name="modern_simming_app_title">Modern Simming App</string>
    <string name="stop_playback_on_start">Stop Playback on Start</string>
    <string name="stop_playback_start_summary">Toggle resuming playback when the app has been stopped.  Currently this behaviour is a \"feature\" and I\'m not sure if I want to keep it</string>
    <string name="dev_settings">Development Settings</string>
    <string name="dev_settings_summary">Configure new features</string>
    <string name="notification_name">Modern Simming App</string>
    <string name="notification_title_new_posts">New Post(s) in %s</string>
</resources>